force-app/main/default/objects/Daily_Report__c/Daily_Report__c.object-meta.xml
<CustomObject>
  <label>Daily Report</label>
  <pluralLabel>Daily Reports</pluralLabel>
  <nameField>
    <type>Text</type>
    <label>Daily Report</label>
  </nameField>
  <sharingModel>ControlledByParent</sharingModel>
</CustomObject>