force-app/main/default/objects/Daily_Report__c/fields/Crew_Lead__c.field-meta.xml
<CustomField>
    <fullName>Crew_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Crew Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Daily Reports (Crew Lead)</relationshipLabel>
    <relationshipName>Crew_Lead_Daily_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>