force-app/main/default/objects/Daily_Report__c/fields/Ground_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Ground_Conditions__c</fullName>
    <label>Ground Conditions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dry</fullName>
                <default>true</default>
            </value>
            <value>
                <fullName>Damp</fullName>
            </value>
            <value>
                <fullName>Wet</fullName>
            </value>
            <value>
                <fullName>Frozen</fullName>
            </value>
            <value>
                <fullName>Mixed</fullName>
            </value>            
        </valueSetDefinition>
    </valueSet>
</CustomField>