force-app/main/default/objects/Daily_Report__c/fields/Hours_Worked__c.field-meta.xml
<CustomField>
    <fullName>Hours_Worked__c</fullName>
    <label>Hours Worked</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>2</scale>
</CustomField>