force-app/main/default/objects/Daily_Report__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Daily Reports</relationshipLabel>
    <relationshipName>Project_Daily_Reports</relationshipName>
    <type>MasterDetail</type>
</CustomField>