force-app/main/default/objects/Daily_Report__c/fields/Start_Time__c.field-meta.xml
<CustomField>
  <fullName>Start_Time__c</fullName>
  <label>Start Time</label>
  <type>DateTime</type>
</CustomField>