force-app/main/default/objects/Daily_Report__c/fields/Weather_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Weather_Conditions__c</fullName>
    <label>Weather Conditions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sunny</fullName>
            </value>
            <value>
                <fullName>Overcast</fullName>
            </value>
            <value>
                <fullName>Raining</fullName>
            </value>
            <value>
                <fullName>Foggy</fullName>
            </value>
            <value>
                <fullName>Snowing</fullName>
            </value>
            <value>
                <fullName>Mixed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>