force-app/main/default/objects/Daily_Report__c/fields/Work_Summary__c.field-meta.xml
<CustomField>
    <fullName>Work_Summary__c</fullName>
    <label>Work Summary</label>
    <type>Html</type>
    <length>32768</length>
</CustomField>